--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OrienteeringSymbols"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".MainScreen"-->
+<!--            android:exported="true"-->
+<!--            android:label="@string/title_activity_main_screen"-->
+<!--            android:theme="@style/Theme.OrienteeringSymbols">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
