--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation("androidx.navigation:navigation-compose:2.7.0")
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation("androidx.compose.material:material-icons-extended")
+
 
     testImplementation 'junit:junit:4.13.2'
 
