--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.orienteeringsymbols'
+    namespace 'com.knollsoftware.orienteeringsymbols'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.orienteeringsymbols"
+        applicationId "com.knollsoftware.orienteeringsymbols"
         minSdk 24
         targetSdk 34
         versionCode 1
